// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-4[aria-disabled='false'],
.emotion-4[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7+.emotion-9 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7+.emotion-9 .emotion-11 {
  fill: #e5dbfd;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7[aria-invalid='true']+.emotion-9 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7[aria-invalid='true']+.emotion-9 .emotion-11 {
  fill: #ffd3e3;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4[aria-disabled='true']>label,
.emotion-4[aria-disabled='true'] .emotion-7 {
  cursor: not-allowed;
}

.emotion-4[aria-disabled='true'] .emotion-9 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4[aria-disabled='true'] .emotion-9 .emotion-11 {
  fill: #f3f3f4;
}

.emotion-6 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-6+.emotion-9 .emotion-13 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6:checked+svg .emotion-13 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:checked[aria-disabled='false'][aria-invalid='false']+.emotion-9 {
  fill: #8c40ef;
}

.emotion-6:checked[aria-disabled='true'][aria-invalid='false']+.emotion-9 {
  fill: #d8c5fc;
}

.emotion-6[aria-invalid='true']:not([aria-disabled='true'])+.emotion-9 {
  fill: #e51963;
}

.emotion-6[aria-disabled='false']:active+.emotion-9 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-6[aria-disabled='false']:active+.emotion-9 .emotion-11 {
  fill: #f1eefc;
}

.emotion-6[aria-disabled='false']:focus-visible+.emotion-9 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-6[aria-invalid='true']:focus+.emotion-9 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-6[aria-invalid='true']:focus+.emotion-9 .emotion-11 {
  fill: #ffebf2;
}

.emotion-8 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-8 .emotion-11 {
  fill: #ffffff;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <legend
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    id="«r1»"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="emotion-8 emotion-9"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-10 emotion-11"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-12 emotion-13"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-14 emotion-15 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«r1»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    id="«r4»"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="emotion-8 emotion-9"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-10 emotion-11"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-12 emotion-13"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-14 emotion-15 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«r4»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-4[aria-disabled='false'],
.emotion-4[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7+.emotion-9 {
  fill: #8c40ef;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7+.emotion-9 .emotion-11 {
  fill: #e5dbfd;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7[aria-invalid='true']+.emotion-9 {
  fill: #b3144d;
}

.emotion-4:hover[aria-disabled='false'] .emotion-7[aria-invalid='true']+.emotion-9 .emotion-11 {
  fill: #ffd3e3;
}

.emotion-4[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-4[aria-disabled='true']>label,
.emotion-4[aria-disabled='true'] .emotion-7 {
  cursor: not-allowed;
}

.emotion-4[aria-disabled='true'] .emotion-9 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-4[aria-disabled='true'] .emotion-9 .emotion-11 {
  fill: #f3f3f4;
}

.emotion-6 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-6+.emotion-9 .emotion-13 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-6:checked+svg .emotion-13 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-6:checked[aria-disabled='false'][aria-invalid='false']+.emotion-9 {
  fill: #8c40ef;
}

.emotion-6:checked[aria-disabled='true'][aria-invalid='false']+.emotion-9 {
  fill: #d8c5fc;
}

.emotion-6[aria-invalid='true']:not([aria-disabled='true'])+.emotion-9 {
  fill: #e51963;
}

.emotion-6[aria-disabled='false']:active+.emotion-9 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-6[aria-disabled='false']:active+.emotion-9 .emotion-11 {
  fill: #f1eefc;
}

.emotion-6[aria-disabled='false']:focus-visible+.emotion-9 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-6[aria-invalid='true']:focus+.emotion-9 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-6[aria-invalid='true']:focus+.emotion-9 .emotion-11 {
  fill: #ffebf2;
}

.emotion-8 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-8 .emotion-11 {
  fill: #ffffff;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="emotion-0 emotion-1"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <legend
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u3j uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
            >
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    id="«r8»"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="emotion-8 emotion-9"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-10 emotion-11"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-12 emotion-13"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-14 emotion-15 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«r8»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-2 emotion-3 uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <div
                  aria-disabled="false"
                  class="emotion-4 emotion-5"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-6 emotion-7"
                    id="«rb»"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="emotion-8 emotion-9"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-10 emotion-11"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-12 emotion-13"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-14 emotion-15 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«rb»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
